- Fixed a GUI anchor in the spectral intensity map plotter.

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,14 @@
     </span>
 
     <p>
+        Version 2016.01.??.0<br />
+        <ol>
+            <li>[bugfix] fixed GUI element in the spectral intensity plotter</li>
+            <li>[bugfix] typos fixed</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2016.01.08.0<br />
         <ol>
             <li>
