[new] included color-scheme preview to the color-scheme selection [bugfix] fixed GUI element in the spectral intensity plotter [bugfix] crash could occur in the spectral intensity plotter [bugfix] typos fixed

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,9 +14,11 @@
     </span>
 
     <p>
-        Version 2016.01.??.0<br />
+        Version 2016.01.18.0<br />
         <ol>
+            <li>[new] included color-scheme preview to the color-scheme selection</li>
             <li>[bugfix] fixed GUI element in the spectral intensity plotter</li>
+            <li>[bugfix] crash could occur in the spectral intensity plotter</li>
             <li>[bugfix] typos fixed</li>
         </ol>
     </p>
