[improvement] keyboard navigation in the folder browser further improved (issue #1) [improvement] selection of the columns to be plotted as preview allows now to select three preferred columns for x and y (issue #3)

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -9,6 +9,14 @@
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
     <p>
+        Version 2016.03.0x.0<br />
+        <ol>
+            <li>[improvement] keyboard navigation in the folder browser further improved</li>
+            <li>[improvement] selection of the columns to be plotted as preview allows now to select three preferred columns for x and y</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2016.03.01.0<br />
         <ol>
             <li>[improvement] added the possibility to activate the automatic display of multiple spectra</li>
