--- a/setup/changelog_stable.html
+++ b/setup/changelog_stable.html
@@ -9,6 +9,16 @@
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
     <p>
+        Version 2016.03.03.0<br />
+        <ol>
+            <li>[improvement] keyboard navigation in the folder browser further improved</li>
+            <li>[improvement] selection of the columns to be plotted as preview allows now to select three preferred columns for x and y</li>
+            <li>[improvement] the setpoint of image files is now read out and displayed in the entries</li>
+            <li>[improvement] Z-controller settings of image files are now read out</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2016.03.01.0<br />
         <ol>
             <li>[improvement] added the possibility to activate the automatic display of multiple spectra</li>
