[new] re-gauge tool for lock-in data which restores the physical dimensions by the given lock-in settings

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -8,6 +8,17 @@
 
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
+
+    <p>
+        Version 2016.03.xx.0<br />
+        <ol>
+            <li>[new] re-gauge tool for lock-in data which restores the physical dimensions by the given lock-in settings</li>
+        </ol>
+    </p>
+
+    
+    <span style="font-size:15px; font-weight:bold;">Earlier Changes:</span><br />
+
     <p>
         Version 2016.03.03.0<br />
         <ol>
@@ -26,8 +37,6 @@
             <li>[improvement] The line scan plot now compares the value range, and not the number of points anymore. This allows plotting data with unequal point count.</li>
         </ol>
     </p>
-
-    <span style="font-size:15px; font-weight:bold;">Earlier Changes:</span><br />
 
     <p>
         Version 2016.02.16.1<br />
