[bugfix] rare crash occured on point selection

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -13,6 +13,7 @@
         Version 2016.03.xx.0<br />
         <ol>
             <li>[new] re-gauge tool for lock-in data which restores the physical dimensions by the given lock-in settings</li>
+            <li>[bugfix] rare crash occured on point selection</li>
         </ol>
     </p>
 
