[improvement] added path-textbox in the folder browser to be able to open a path directly

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -17,6 +17,7 @@
         Version 2016.04.xx.0<br />
         <ol>
             <li>[new] opening of scan images in external viewers is possible now</li>
+            <li>[improvement] added path-textbox in the folder browser to be able to open a path directly</li>
             <li>[bugfix] Fixed a crash occurring in the line profile selection, when being outside the image.</li>
         </ol>
     </p>
