--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -18,6 +18,7 @@
         <ol>
             <li>[new] opening of scan images in external viewers is possible now</li>
             <li>[improvement] added path-textbox in the folder browser to be able to open a path directly</li>
+            <li>[improvement] backward channels in Createc files are now reversed during import</li>
             <li>[bugfix] Fixed a crash occurring in the line profile selection, when being outside the image.</li>
         </ol>
     </p>
