[improvement] clicking on the location of a spectrum now jumps to that spectrum

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -17,6 +17,7 @@
         Version 2016.05.xx.0<br />
         <ol>
             <li>[improvement] spectra locations in images are now showing the name of the spectrum on hovering with the mouse over the point</li>
+            <li>[improvement] clicking on the location of a spectrum now jumps to that spectrum</li>
         </ol>
     </p>
 
