[bugfix] fixed a rarely occuring bug in the value range selector histrogram [bugfix] fixed a bug in the data handling windows [bugfix] fixed a bug in the folder browser tree

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,15 @@
     </span>
     
     <p>
+        Version 2016.06.xx.0<br />
+        <ol>
+            <li>[bugfix] fixed a rarely occuring bug in the value range selector histrogram</li>
+            <li>[bugfix] fixed a bug in the data handling windows</li>
+            <li>[bugfix] fixed a bug in the folder browser tree</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2016.05.16.0<br />
         <ol>
             <li>[release] version 2016.05.16.0 published</li>
