--- a/setup/changelog_dev.html
+++ b/setup/changelog_dev.html
@@ -14,6 +14,28 @@
     </span>
     
     <p>
+        Version 2016.08.17.0<br />
+        <ol>
+            <li>[bugfix] the last used filter is now stored correctly</li>
+        </ol>
+    </p>
+
+    <p>
+        Version 2016.08.16.0<br />
+        <ol>
+            <li>[new] added inelastic tip-sample convolution fit class</li>
+        </ol>
+    </p>
+
+    <p>
+        Version 2016.08.12.0<br />
+        <ol>
+            <li>[bugfix] sporadic crash during list refresh in a folder that gets new files got fixed</li>
+            <li>[improvement] added customized automatic list refresh timer</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2016.07.19.1<br />
         <ol>
             <li>[improvement] included creep correction into the grid file plotter</li>
