the scan image viewer can now display an arbitrary property embed in the image

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,14 @@
     </span>
     
     <p>
+        Version 2017.03.29.0<br />
+        <ol>
+            <li>[improved] the scan image file viewer has now a new tab showing all header properties</li>
+            <li>[improved] the scan image viewer can now display an arbitrary property embed in the image</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2017.03.09.0<br />
         <ol>
             <li>[improved] the cache file is now stored in a background thread, not blocking the UI-thread anymore</li>
