[new] * SpectraFox file format (.sfd) * export possibility of grid spectra to SFD files * separate data explorer for grid files

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -16,6 +16,9 @@
     <p>
         Version 2017.03.29.0<br />
         <ol>
+            <li>[new] SpectraFox file format (.sfd)</li>
+            <li>[new] export possibility of grid spectra to SFD files</li>
+            <li>[new] separate data explorer for grid files</li>
             <li>[improved] the scan image file viewer has now a new tab showing all header properties</li>
             <li>[improved] the scan image viewer can now display an arbitrary property embed in the image</li>
         </ol>
