bugfix for CreatecV4 format

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,13 @@
     </span>
     
     <p>
+        Version 2020.04.27.1<br />
+        <ol>
+            <li>[improvement] bugfix in column order for Createc V4 file format</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2020.04.27.0<br />
         <ol>
             <li>[improvement] added support for Createc V4 file format</li>
