--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -9,6 +9,13 @@
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
     <p>
+        Version 2020.04.27.1<br />
+        <ol>
+            <li>[improvement] bugfix in column order for Createc V4 file format</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2020.04.27.0<br />
         <ol>
             <li>[improvement] added support for Createc V4 file format</li>
