--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,8 +14,9 @@
     </span>
 
     <p>
-        Version 2022.07.07.0<br />
+        Version 2022.08.10.0<br />
         <ol>
+            <li>[improvement] improved security by setting update source to https</li>
             <li>[new] added generic tab/comma/semicolon separated data file parser</li>
             <li>[improvement] updated 3rd party libraries</li>
             <li>[bugfix] fixed a scroll bug on 64-bit systems</li>
