--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -9,8 +9,9 @@
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
     <p>
-        Version 2022.07.07.0<br />
+        Version 2022.08.10.0<br />
         <ol>
+            <li>[improvement] improved security by setting update source to https</li>
             <li>[new] added generic tab/comma/semicolon separated data file parser</li>
             <li>[improvement] updated 3rd party libraries</li>
             <li>[bugfix] fixed a scroll bug on 64-bit systems</li>
