[bugfix] fixed a loading error for nanonis files caused by the last release [improvement] updated 3rd party libraries [improvement] bundle correct .NET version

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,14 @@
     </span>
 
     <p>
+        Version 2023.03.03.0<br />
+        <ol>
+            <li>[bugfix] fixed a loading error for nanonis files caused by the last release</li>
+            <li>[improvement] updated 3rd party libraries</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2022.08.10.0<br />
         <ol>
             <li>[improvement] improved security by setting update source to https</li>
