Fix bug in nanonis file header parsing

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_dev.html
@@ -14,6 +14,13 @@
     </span>
 
     <p>
+        Version 2023.04.16.0<br />
+        <ol>
+            <li>[bugfix] fixed value parsing of nanonis file header</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2023.03.03.0<br />
         <ol>
             <li>[bugfix] fixed a loading error for nanonis files caused by the last release</li>
