--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/changelog_stable.html
@@ -9,6 +9,13 @@
     <span style="font-size:15px; font-weight:bold;">Stable Update Channel:</span><br />
 
     <p>
+        Version 2023.04.16.0<br />
+        <ol>
+            <li>[bugfix] fixed value parsing of nanonis file header</li>
+        </ol>
+    </p>
+
+    <p>
         Version 2023.03.03.0<br />
         <ol>
             <li>[bugfix] fixed a loading error for nanonis files caused by the last release</li>
